# python-sdk

./: README.md  mkdocs.yml  pyproject.toml
.github/actions/conformance/: client.py
docs/: migration.md  whats-new.md
docs/advanced/: toolsets.md
docs/client/: identity-assertion.md  oauth-clients.md  transports.md
docs/get-started/: installation.md
docs_src/client_transports/: tutorial003.py
docs_src/identity_assertion/: tutorial001.py
docs_src/oauth_clients/: tutorial001.py  tutorial002.py
examples/clients/simple-auth-client/mcp_simple_auth_client/: main.py
examples/clients/simple-chatbot/mcp_simple_chatbot/: main.py
examples/clients/sse-polling-client/mcp_sse_polling_client/: main.py
examples/mcpserver/: text_me.py
examples/servers/everything-server/: pyproject.toml
examples/servers/simple-auth/: pyproject.toml
examples/servers/simple-auth/mcp_simple_auth/: token_verifier.py
examples/servers/simple-pagination/: pyproject.toml
examples/servers/simple-prompt/: pyproject.toml
examples/servers/simple-resource/: pyproject.toml
examples/servers/simple-streamablehttp/: pyproject.toml
examples/servers/simple-streamablehttp-stateless/: pyproject.toml
examples/servers/simple-tool/: pyproject.toml
examples/servers/sse-polling-demo/: pyproject.toml
examples/snippets/clients/: identity_assertion_client.py  oauth_client.py
examples/stories/: _harness.py  _hosting.py  manifest.toml
examples/stories/_shared/: auth.py
examples/stories/bearer_auth/: README.md  client.py
examples/stories/identity_assertion/: README.md  client.py
examples/stories/json_response/: README.md  client.py
examples/stories/legacy_routing/: README.md
examples/stories/oauth/: README.md  client.py
examples/stories/oauth_client_credentials/: README.md  client.py
examples/stories/sse_polling/: README.md
examples/stories/standalone_get/: README.md
examples/stories/stateless_legacy/: README.md
src/mcp-types/mcp_types/: __init__.py  _types.py
src/mcp/client/: _probe.py  client.py  session.py  session_group.py  sse.py  streamable_http.py
src/mcp/client/auth/: __init__.py  oauth2.py  utils.py
src/mcp/client/auth/extensions/: client_credentials.py  identity_assertion.py
src/mcp/server/: extension.py  toolsets.py
src/mcp/server/mcpserver/: server.py
src/mcp/server/mcpserver/resources/: types.py
src/mcp/shared/: _httpx_utils.py
tests/client/: test_auth.py  test_client.py  test_client_caching.py  test_http_unicode.py  test_notification_response.py  test_probe.py  test_scope_bug_1630.py  test_session_group.py  test_streamable_http.py  test_transport_stream_cleanup.py
tests/client/auth/extensions/: test_identity_assertion.py
tests/docs_src/: test_asgi.py  test_authorization.py  test_deploy.py  test_identity_assertion.py  test_legacy_clients.py  test_oauth_clients.py  test_troubleshooting.py
tests/examples/: conftest.py  test_stories_smoke.py
tests/interaction/: README.md  _connect.py  _modern_vocab.py  _requirements.py
tests/interaction/auth/: _harness.py  test_as_handlers.py  test_bearer.py  test_discovery.py  test_flow.py
tests/interaction/lowlevel/: test_client_connect.py
tests/interaction/transports/: _bridge.py  test_bridge.py  test_client_transport_http.py  test_flows.py  test_hosting_http.py  test_hosting_http_modern.py  test_hosting_resume.py  test_hosting_session.py  test_legacy_wire.py  test_sse.py
tests/issues/: test_1363_race_condition_streamable_http.py
tests/server/: test_sse_security.py  test_streamable_http_manager.py  test_streamable_http_modern.py  test_streamable_http_security.py  test_toolsets.py
tests/server/auth/: test_error_handling.py  test_identity_assertion.py  test_protected_resource.py
tests/server/mcpserver/auth/: test_auth_integration.py
tests/shared/: test_httpx_utils.py  test_sse.py  test_streamable_http.py
